# BaseRender

./: .cursorignore  .dockerignore  .gitignore  LICENSE  README.md  amplify.yml  otio-cloud-render-architecture.md  package-lock.json  package.json  pyproject.toml  render.yaml
.cursor/rules/: media-domain-context.mdc
apps/api/: .env.example  pyproject.toml
apps/api/src/baserender_api/: __init__.py  app.py  defaults.py  env.py  eventbridge_client.py  internal_events.py  job_store.py  mediaconvert_client.py  orchestrator.py  output_storage.py  schemas.py  static_files.py  storage.py
apps/api/src/baserender_api/auth/: __init__.py  routes.py  session.py
apps/api/src/baserender_api/media/: __init__.py  filters.py  matching.py  prefix.py  provider.py  routes.py  s3.py  schemas.py
apps/api/tests/: conftest.py  test_app.py  test_cloud_jobs.py  test_eventbridge_client.py  test_internal_events.py  test_job_store.py  test_matching.py  test_media_filters.py  test_media_routes.py  test_mediaconvert_client.py  test_orchestrator.py  test_output_storage.py  test_prefix.py  test_s3.py  test_storage.py  test_transcode_api.py
apps/lambda/: build_zip.sh  pyproject.toml
apps/lambda/src/baserender_lambda/: __init__.py  events.py  handler.py  main.py  notifier.py  notify.py  s3_io.py  settings.py  timeline.py  unified.py
apps/lambda/tests/: test_events.py  test_handler.py  test_notifier.py  test_notify.py  test_timeline.py  test_unified.py
apps/web/: .env.example  index.html  next-auth.d.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/worker/: .env.example  Dockerfile  pyproject.toml
apps/worker/src/baserender_worker/: __init__.py  job.py  main.py  service.py
apps/worker/tests/: test_job.py
config/: defaults.json  supported-media-extensions.json
docs/: roadmap.md
docs/reference/: auth-cognito.md  ffmpeg-filtergraphs.md  media-rendering-workflow.md  mediaconvert-architecture.md  otio-format-notes.md  otio-python-api.md  s3-iam-policy.md
fixtures/: hybrid.otio  sample.otio  two_clip.otio
fixtures/media/: Shot_A.mov
scripts/: generate_phase2_fixtures.py  otio_to_ffmpeg.py  phase2_run.sh  phase2_validate.py
scripts/aws/: dev-state.json  (+7 more)
(+36 files in other folders)
